test_data/Xml/Unexpected/Unserializable/InvalidClassName/operationVariable/wrong.xml.exception
Expected an element representing an instance of class OperationVariable with element name operationVariable, but got: utterlyInvalid at: the beginning